Still trying to fix too big title

--- a/style.css
+++ b/style.css
@@ -272,8 +272,8 @@ body {
     line-height: 20px;
   }
   h2 {
-    font-size: 1.1em;
-    line-height: 1.2em;
+    font-size: 1.2em;
+    line-height: 1.3em;
   }
 }
 
